[tool.poetry]
name = "python-pgbouncer-benchmark"
version = "0.1.0"
description = ""
authors = ["Danil Akhtarov <d.akhtarov@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.25.0"
fastapi = "^0.78.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.36"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
